syntax="proto3";

package dousheng.interaction.favorite;

//生成Go文件的包目录路径
option go_package="github.com/Go-To-Byte/DouSheng/interaction-service/apps/favorite";

import "github.com/Go-To-Byte/DouSheng/video-service/apps/video/pb/video.proto";

//定义视频点赞接口
service Service{
  // 点赞/取消点赞 操作
  rpc FavoriteAction(FavoriteActionRequest) returns (FavoriteActionResponse);
  // 获取喜欢列表
  rpc FavoriteList(FavoriteListRequest) returns (FavoriteListResponse);
  // 获取 1、用户喜欢列表的数目 2、获取视频点赞数
  rpc FavoriteCount(FavoriteCountRequest) returns (FavoriteCountResponse);

  // 获取视频点赞数量 map[videoId] = favorite_count + isFavorite
  rpc FavoriteCountMap(FavoriteMapRequest) returns(FavoriteMapResponse);
}

// 点赞信息Module TODO：调整为联合主键
message FavoritePo {
  // ID
  // @gotags: json:"id"
  int64 id = 1  ;
  // 用户ID
  // @gotags: json:"user_id"
  int64 user_id = 2 ;
  // 视频ID
  // @gotags: json:"video_id"
  int64 video_id = 3 ;
}

//定义 点赞/取消点赞 请求体 POST
message FavoriteActionRequest {
  // 用户鉴权Token
  // @gotags: json:"token" form:"token" binding:"required"
  string token = 1 ;
  // 视频id
  // @gotags: json:"video_id" form:"video_id" binding:"required" validate:"required"
  int64 video_id = 2;
  //1-点赞 2-取消点赞
  // @gotags: json:"action_type" form:"action_type" binding:"required" validate:"required"
  int64 action_type = 3;
}

// 点赞操作响应体
message FavoriteActionResponse{
  // 可以携带一些额外属性
  // @gotags: json:"mate"
  map<string, string> mate = 1;
}

// 获取喜欢列表请求体
message FavoriteListRequest{
  // 用户id
  // @gotags: json:"user_id" form:"user_id" validate:"required" binding:"required"
  int64 user_id = 1 ;
  // 用户鉴权token
  // @gotags: json:"token" form:"token" binding:"required"
  string token = 2 ;
}

// 获取喜欢列表响应体
message FavoriteListResponse {
  // 用户点赞视频列表
  // @gotags: json:"video_list"
  repeated video.Video video_list = 5;
}

message FavoriteCountRequest {
  // 用户ID
  // @gotags: json:"user_id"
  int64 user_id = 1;
  // 视频IDs
  // @gotags: json:"video_ids"
  repeated int64 video_ids = 2;
}

// 用于喜欢总数、[用户喜欢列表、视频点赞总数]
message FavoriteCountResponse {
  // 点赞的视频总数
  // @gotags: json:"favorite_count"
  int64 favorite_count = 1;
  // 获得的点赞数量
  // @gotags: json:"acquire_favorite_count"
  int64 acquire_favorite_count = 2;
}

// 视频点赞 IDs
message FavoriteMapRequest {
  // 视频ID 列表
  // @gotags: json:"video_ids"
  repeated int64 video_ids = 1;
  // 用户 ID
  // @gotags: json:"user_id"
  int64 user_id = 2;
}

// 视频点赞列表：map[userId] = favorite_count
message FavoriteMapResponse {
  // 用户列表：map[videoId] = FavoriteMap
  // @gotags: json:"favorite_map"
  map<int64, FavoriteMap> favorite_map = 1;
}

message FavoriteMap {
  // 用户 ID
  // @gotags: json:"favorite_count"
  int64 favorite_count = 1;

  // 是否点赞
  // @gotags: json:"is_favorite"
  bool is_favorite = 2;
}